--- a/index.html
+++ b/index.html
@@ -12,14 +12,10 @@
     <script>
     
     MathJax.Hub.Config({
-      showProcessingMessages: false,
-      jax: ["input/TeX", "output/HTML-CSS"],
+      jax: ["input/TeX","output/HTML-CSS"],
+      extensions: ["tex2jax.js","MathMenu.js","MathZoom.js"],
       TeX: {
-        TagSide: "left",
-        Macros: {
-          RR: '{\\bf R}',
-          bold: ['{\\bf #1}',1]
-        }
+        extensions: ["AMSmath.js","AMSsymbols.js","noErrors.js","noUndefined.js"]
       }
     });
     </script>
